[Java] Generate `UnsafeApi` as a replacement for `UnsafeAccess`.